Release v1.1.0-beta1: changed jpackage icons